--- a/react-learn/public/index.html
+++ b/react-learn/public/index.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
+    <style>
+      .modal{
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .5);
+        margin-top: 200px;
+      }
+    </style>
   </head>
   <body>
     <div id='root'></div>
-   
+    <div class='modal'></div>
+    
   </body>
 </html>
